--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%; background-color: #252525; color: lightgray">
   <head>
-    <meta charset="utf-8">
-    <title>GG Hottub</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GG Hot Tub</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
